--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "babel-plugin-styled-components": "^1.10.7",
+    "emailjs-com": "^2.6.3",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "next": "9.4.4",
