--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^3.10.0",
+    "react-typist": "^2.0.5",
     "styled-components": "^5.1.1",
     "toastr": "^2.1.4",
     "yup": "^0.29.1"
