--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emailjs-com": "^2.6.3",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
+    "gsap": "^3.6.0",
     "next": "9.4.4",
     "next-images": "^1.4.0",
     "next-with-apollo": "^5.1.0",
